--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -1221,6 +1221,7 @@ specification with its own version numbering.\footnote{
 \subsection*{1.5: 23 May 2013 to current}
 
 \begin{itemize}
+\item Add {\tt @RG BC} header tag. (Apr 2018)
 \item Permit UTF-8 in a few header tags. (Mar 2018)
 \item Add support for $>65535$ cigar operations. (Jul 2017)
 \item Add {\tt @SQ AH} header tag. (Mar 2017)
