--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -257,7 +257,7 @@ where \emph{name} is {\tt [0-9A-Za-z][0-9A-Za-z*+.@\_|-]*}\\\cline{2-3}
   is used in the RG tags of alignment records. Must be unique among all read groups in header section.  Read group IDs may be modified when merging SAM files in order to handle collisions.\\\cline{2-3}
   & {\tt BC} & Barcode sequence identifying the sample/library.
   The sequence is the expected bases read by the instrument in the absence of sequencing errors.
-  In the case of multiple Sample Barcodes (e.g., one on each end of the template) the recommended implementation concatenates all the barcodes and places a hyphen (`{\tt -}') between the barcodes from the same template.\\\cline{2-3}
+  If there are several barcodes for the sample/library (e.g., one on each end of the template), the BC value is the barcode sequences concatenated together and separated by hyphens (`{\tt -}').\\\cline{2-3}
   & {\tt CN} & Name of sequencing center producing the read.\\\cline{2-3}
   & {\tt DS} & Description.  UTF-8 encoding may be used.\\\cline{2-3}
   & {\tt DT} & Date the run was produced (ISO8601 date or date/time).\\\cline{2-3}
