Bug fix NP encoding type.
It is defined as 'int' in the main table, but section 1.5 lists the
encoding type as long.  This is both pointless (the mate's AP field is
int, not long) and also not how it is implemented in both htsjdk and
htslib.  The origin of this stems all the way back to the CRAM 1.0
word document, but was apparently missed when fixing the spec to match
the initial Java implementation.

--- a/CRAMv2.1.tex
+++ b/CRAMv2.1.tex
@@ -1105,7 +1105,7 @@ is included into the CRAM record:
 \hline
 3 & int & NS & mate reference sequence identifier \tabularnewline
 \hline
-4 & long & NP & mate alignment start position \tabularnewline
+4 & int & NP & mate alignment start position \tabularnewline
 \hline
 5 & int & TS & the size of the template (insert size)\tabularnewline
 \hline
