Fix array tag typo

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -354,7 +354,7 @@ are all percent encoded as in the {\tt CT} tag.
 \subsection{Technology-specific data}
 
 \begin{description}
-\item[FZ:B,S:\tagvalue{intensities}]
+\item[FZ:B:S,\tagvalue{intensities}]
 Flow signal intensities on the original strand of the read, stored as {\tt (uint16\_t) round(value * 100.0)}.
 \end{description}
 
