--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -487,7 +487,7 @@ Each bit is explained in the following table:
   next read.  If {\sf
     RNEXT} is `*', no assumptions can be made on {\sf PNEXT} and bit
   0x20.
-\item {\sf PNEXT}: Position of the primary alignment of the NEXT read in the template. Set as
+\item {\sf PNEXT}: 1-based Position of the primary alignment of the NEXT read in the template. Set as
   0 when the information is unavailable. This field equals {\sf POS} at the primary line of
   the next read. If {\sf PNEXT} is 0, no assumptions can be made on
   {\sf RNEXT} and bit 0x20.
