--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -250,21 +250,22 @@ Barcode sequence (Identifying the sample/library), with any quality scores (opti
 The {\tt BC} tag should match the {\tt QT} tag in length. 
 In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the barcodes and places a hyphen (`{\tt -}') between the barcodes from the same template. 
 
-\item[QT:Z:\tagvalue{qualities}] 
+\item[QT:Z:\tagvalue{qualities}]
 Phred quality of the sample-barcode sequence in the {\tt BC} (or {\tt RT}) tag. 
 Same encoding as {\sf QUAL}, i.e., Phred score + 33.
-In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with spaces (`{\tt \textvisiblespace}') between the different strings from the same template. 
+In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with spaces (`{\tt \textvisiblespace}') between the different strings from the same template.
 
 \item[CB:Z:\tagvalue{str}]
-Cell identifier based on the cellular-barcode sequence ({\tt CR}), with a correction optionally applied. The sequence may optionally be followed by a dash (`{\tt -}') and one or more alphanumeric characters to form an identifier.
-All reads with the same {\tt CB} tag likely derive from the same cell.
+Cell identifier based on the cellular-barcode sequence ({\tt CR}) that may be optionally i) error corrected and ii) followed by a dash (`{\tt -}') and one or more alphanumeric characters to form an identifier. 
+In the case of the cellular barcode ({\tt CR}) being based on multiple barcode sequences the recommended implementation concatenates all the (corrected or uncorrected) barcodes with a hyphen (`{\tt -}') between the different barcodes. 
+Notwithstanding errors (e.g., sequencing), all reads from a single cell are expected to have the same {\tt CB} tag.
 
-\item[CR:Z:\tagvalue{str}]
-Cellular barcode. Sequence bases of the cellular-barcode as reported by the sequencer (uncorrected) with the respective quality scores stored in {\tt CY}.
-All reads with the same {\tt CR} tag likely derive from the same cell.
+\item[CR:Z:\tagvalue{sequence+}]
+Cellular barcode. Sequence bases of the cellular-barcode as reported by the sequencer (uncorrected) with the respective quality scores (optionally) stored in {\tt CY}. 
+Notwithstanding errors (e.g., sequencing), all reads with the same {\tt CR} tag likely derive from the same cell. 
 In the case of the cellular barcode being based on multiple barcode sequences the recommended implementation concatenates all the barcodes with a hyphen (`{\tt -}') between the different barcodes.
 
-\item[CY:Z:\tagvalue{qualities+}] 
+\item[CY:Z:\tagvalue{qualities+}]
 Phred quality of the cellular-barcode sequence in the {\tt CR} tag. 
 Same encoding as {\sf QUAL}, i.e., Phred score + 33.
 The lengths of the {\tt CY} and the {\tt CR} tags must match. 
