--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -67,10 +67,10 @@ or
   {\tt CO} & Z & Free-text comments \\
   {\tt CP} & i & Leftmost coordinate of the next hit \\
   {\tt CQ} & Z & Color read base qualities \\
-  {\tt CR} & Z & Sequence bases of the cellular-barcode as reported by the sequencer (uncorrected) with the respective quality scores stored in {\tt CY}\\
+  {\tt CR} & Z & Cellular barcode sequence bases (uncorrected) \\
   {\tt CS} & Z & Color read sequence \\
   {\tt CT} & Z & Complete read annotation tag, used for consensus annotation dummy features \\
-  {\tt CY} & Z & Phred quality of the cellular-barcode sequence in the {\tt CR} tag \\
+  {\tt CY} & Z & Phred quality of the cellular barcode sequence in the {\tt CR} tag \\
   {\tt E2} & Z & The 2nd most likely base calls \\
   {\tt FI} & i & The index of segment in the template \\
   {\tt FS} & Z & Segment suffix \\
@@ -264,19 +264,21 @@ Same encoding as {\sf QUAL}, i.e., Phred score + 33.
 In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with spaces (`{\tt \textvisiblespace}') between the different strings from the same template. 
 
 \item[CB:Z:\tagvalue{str}]
-Cell identifier based on the cellular-barcode sequence ({\tt CR}) that may be optionally i) error corrected and ii) followed by a dash (`{\tt -}') and one or more alphanumeric characters to form an identifier.
+Cell identifier, consisting of the optionally-corrected cellular barcode sequence and an optional suffix.
+The sequence part is similar to the {\tt CR} tag, but may have had sequencing errors etc corrected.
+This may be followed by a suffix consisting of a hyphen (`{\tt -}') and one or more alphanumeric characters to form an identifier.
 In the case of the cellular barcode ({\tt CR}) being based on multiple barcode sequences the recommended implementation concatenates all the (corrected or uncorrected) barcodes with a hyphen (`{\tt -}') between the different barcodes.
-Notwithstanding errors (e.g., sequencing), all reads from a single cell are expected to have the same {\tt CB} tag.
+Sequencing errors etc aside, all reads from a single cell are expected to have the same {\tt CB} tag.
 
 \item[CR:Z:\tagvalue{sequence+}]
-Cellular barcode. Sequence bases of the cellular-barcode as reported by the sequencer (uncorrected) with the respective quality scores (optionally) stored in {\tt CY}.
-Notwithstanding errors (e.g., sequencing), all reads with the same {\tt CR} tag likely derive from the same cell.
+Cellular barcode. The uncorrected sequence bases of the cellular barcode as reported by the sequencing machine, with the corresponding base quality scores (optionally) stored in {\tt CY}.
+Sequencing errors etc aside, all reads with the same {\tt CR} tag likely derive from the same cell.
 In the case of the cellular barcode being based on multiple barcode sequences the recommended implementation concatenates all the barcodes with a hyphen (`{\tt -}') between the different barcodes.
 
 \item[CY:Z:\tagvalue{qualities+}]
-Phred quality of the cellular-barcode sequence in the {\tt CR} tag.
+Phred quality of the cellular barcode sequence in the {\tt CR} tag.
 Same encoding as {\sf QUAL}, i.e., Phred score + 33.
-The lengths of the {\tt CY} and the {\tt CR} tags must match.
+The lengths of the {\tt CY} and {\tt CR} tags must match.
 In the case of the cellular barcode being based on multiple barcode sequences the recommended implementation concatenates all the quality strings with with spaces (`{\tt \textvisiblespace}') between the different strings.
 
 \item[MI:Z:\tagvalue{str}]
@@ -414,6 +416,7 @@ have been made while that version was current.
 
 \subsection*{1.5: 23 May 2013 to current}
 \begin{itemize}
+\item Cellular barcode tags CB, CR, and CY added. (May 2018)
 \item Add UMI-related tags (RX, QX, OX, BZ, MI) and clarified usage of sample barcode tag BC. (August 2017)
 \item SAMtags.txt (this file) created with tags from SAMv1 
 \end{itemize}
