--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -351,7 +351,7 @@ There are 8 fixed fields per record.  Fixed fields are:
 	END		& 1		& Integer	& End position (for use with symbolic alleles) \\
 	H2		& 0		& Flag		& HapMap2 membership \\
 	H3		& 0		& Flag		& HapMap3 membership \\
-	MQ		& 1		& .		& RMS mapping quality \\
+	MQ		& 1		& Float		& RMS mapping quality \\
 	MQ0   		& 1		& Integer	& Number of MAPQ == 0 reads \\
 	NS		& 1		& Integer	& Number of samples with data \\
 	SB		& 4		& Integer	& Strand bias \\
