Note that RT was of type Z [FIXUP into previous commit]

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -419,7 +419,7 @@ This appendix lists when standard tags were initially defined or significantly c
 
 Cellular barcode tags CB, CR, and CY added.
 
-Removed the RT tag, which was a long-deprecated synonym for BC.
+Removed the RT:Z tag, which was a long-deprecated synonym for BC.
 
 \subsubsection*{November 2017}
 
